# Tweepy

./: .gitignore  README.md  modules.txt  pyproject.toml
trabalho-twitter/trabalho-twitter/: App.py
tweepy/: __init__.py
